Aula 2 de MQ ( Correção)
colocando width: 100%;
no main

--- a/cev modulo 4/media_queries/estilo/tela.css
+++ b/cev modulo 4/media_queries/estilo/tela.css
@@ -28,6 +28,7 @@ html{
     display: flex;
     flex-direction: row;
     background-color: rgb(97, 94, 94);
+    width: 100%;
     padding: 5px;
     justify-content: flex-start;
 }
