Aula de Media Queries (Aula 04)
Aprendendo a criar estilos pra diferentes orientações de tela.

--- a/cev modulo 4/media_queries/mq02.html/estilos/retrato.css
+++ b/cev modulo 4/media_queries/mq02.html/estilos/retrato.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Aparelho em pé (portrait) */
+
+body{
+    background-color: rgb(55, 117, 133);  
+    background-image: url('../imagens/cev-portrait.jpg'); 
+    background-size: cover; 
+    background-position: bottom center;
+}
