--- a/cev modulo 4/media_queries/mq02.html/estilos/paisagem.css
+++ b/cev modulo 4/media_queries/mq02.html/estilos/paisagem.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /* Aparelho Deitado (landscape) */
+
+body{
+    background-color: green;
+    background-image: url('../imagens/cev-landscape.jpg');
+    background-size: cover;
+    background-position: left bottom;
+}
