--- a/flexbox/exercicios/ex.css
+++ b/flexbox/exercicios/ex.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+/* Exercicio 01 de Flexbox */
 *{
     margin: 0;
     padding: 0;
@@ -33,4 +34,28 @@ a {
 }
 .menu li a:hover{
     background-color: rgb(80, 30, 21);
+}
+
+/* Exercicio 02 de Flexbox */
+
+h1{
+    text-align: center;
+    font-size: 2em;
+    margin-top: 80px;
+    margin-bottom: 50px;
+}
+img{
+    max-width: 100%;
+    display: block;
+}
+.flex{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: auto;
+}
+
+.flex > div{
+    flex: 1 1 200px;
+    margin: 10px;
 }
