--- a/CSS grid/aula.css
+++ b/CSS grid/aula.css
@@ -4,15 +4,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 1em;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(39, 159, 155, 0.812);
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: 
+    [um] 1fr 
+    [dois] 1fr 
+    [tres] 1fr
+    [quatro];
+    grid-template-rows: 
+    [um] 1fr 
+    [dois] 1fr 
+    [tres] 1fr
+    [quatro];
     gap: 30px;
     max-width: 1020px;
     margin: auto;
@@ -27,13 +38,14 @@ body {
 }
 
 .grid div:nth-child(5) {
-    background-color: purple;
-    grid-column: span 2;
+    background-color: rgb(128, 33, 103);
+    /* grid-column: dois/tres;
+    grid-row: um/quatro */
+    font-size: 2em ;
+    text-align: center;
+    grid-area: 1/1/2/4;
 }
-
-@media (max-width: 670px) {
-    .grid div:nth-child(5) {
-        background-color: purple;
-        grid-column: span 1;
-    }
+.grid div:nth-child(1){
+    background-color: gray;
+    grid-area:2/1/10/3;
 }
