Aula 33 // Otavio Miranda
*Ultimo Exercicio dessa Aula
- criando um layout usando css grid usando a ferramente grid-temp-area
- deixando o site um pouco responsivo com media querie
- usando flexbox e grid

--- a/CSS grid/aula.css
+++ b/CSS grid/aula.css
@@ -14,16 +14,7 @@ body {
 
 .grid {
     display: grid;
-    grid-template-columns: 
-    [um] 1fr 
-    [dois] 1fr 
-    [tres] 1fr
-    [quatro];
-    grid-template-rows: 
-    [um] 1fr 
-    [dois] 1fr 
-    [tres] 1fr
-    [quatro];
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 30px;
     max-width: 1020px;
     margin: auto;
@@ -39,13 +30,4 @@ body {
 
 .grid div:nth-child(5) {
     background-color: rgb(128, 33, 103);
-    /* grid-column: dois/tres;
-    grid-row: um/quatro */
-    font-size: 2em ;
-    text-align: center;
-    grid-area: 1/1/2/4;
-}
-.grid div:nth-child(1){
-    background-color: gray;
-    grid-area:2/1/10/3;
 }
